Browser animation fixed

--- a/ReportGeneration/src/app/tabsection/tabsection.component.html
+++ b/ReportGeneration/src/app/tabsection/tabsection.component.html
@@ -1,7 +1,7 @@
   <ul class="nav nav-tabs">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">Option 1</a></li>
-    <li><a href="#">Option 2</a></li>
-    <li><a href="#">Option 3</a></li>
+    <li class="active"><a href="javascript:void()">Home</a></li>
+    <li><a href="javascript:void()">Option 1</a></li>
+    <li><a href="javascript:void()">Option 2</a></li>
+    <li><a href="javascript:void()">Option 3</a></li>
   </ul>
   <app-reportstable></app-reportstable>
