--- a/ReportGeneration/src/app/header/header.component.html
+++ b/ReportGeneration/src/app/header/header.component.html
@@ -4,8 +4,8 @@
       <a class="navbar-brand" routerLink="/applicantform">Application Name</a>
     </div>
     <div>
-      <ul class="nav navbar-nav pull-right">
-       <li><a routerLink="/logout">Logout</a></li>
+      <ul class="nav navbar-nav pull-right logoutsection">
+       <li><a href="javascript:void(0)">Welcome {{selectedlogindata.username | uppercase}},</a><a routerLink="/login">Logout</a></li>
       </ul>
     </div>
   </div>
