--- a/ReportGeneration/src/app/reportstable/reportstable.component.html
+++ b/ReportGeneration/src/app/reportstable/reportstable.component.html
@@ -1,3 +1,5 @@
+<div class="row">
+<div class="col-lg-12">
 <div class="example-container mat-elevation-z8">
   <mat-table #table [(dataSource)]="dataSource">
 
@@ -51,4 +53,6 @@
 
   <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]">
   </mat-paginator>
+</div>
+</div>
 </div>
