new modal pushed

--- a/ReportGeneration/src/app/data-table/data-table.component.html
+++ b/ReportGeneration/src/app/data-table/data-table.component.html
@@ -3,34 +3,21 @@
 <div class="example-container mat-elevation-z8">
   <mat-table #table [(dataSource)]="dataSource">
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
+    <ng-container matColumnDef="reportname">
+      <mat-header-cell *matHeaderCellDef> Report name </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.reportname}} </mat-cell>
     </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="Interview date">
-      <mat-header-cell *matHeaderCellDef> Title 2</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.interviewdate}} </mat-cell>
+    <ng-container matColumnDef="report">
+      <mat-header-cell *matHeaderCellDef> Report </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.report}} </mat-cell>
+    </ng-container>
+   
+    <ng-container matColumnDef="datasetname">
+      <mat-header-cell *matHeaderCellDef> Data set </mat-header-cell>
+      <mat-cell *matCellDef="let element"> <p *ngFor="let item of element.datasetname">{{item}}</p> </mat-cell>
     </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="Interview time">
-      <mat-header-cell *matHeaderCellDef> Title 3 </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.interviewtime}} </mat-cell>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="Interview type">
-      <mat-header-cell *matHeaderCellDef> Title 4 </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.interviewtype}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="Primary interviewer">
-      <mat-header-cell *matHeaderCellDef> Title 5</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.primaryinterviewer}} </mat-cell>
-    </ng-container>
     <ng-container matColumnDef="comments">
       <mat-header-cell *matHeaderCellDef>Comments</mat-header-cell>
       <mat-cell *matCellDef="let element">
