--- a/ReportGeneration/src/app/reportstable/reportstable.component.html
+++ b/ReportGeneration/src/app/reportstable/reportstable.component.html
@@ -2,39 +2,27 @@
 <div class="col-lg-12">
 <div class="example-container mat-elevation-z8">
   <mat-table #table [(dataSource)]="dataSource">
-
+<!--
     <!-- Position Column -->
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
+    <ng-container matColumnDef="reportname">
+      <mat-header-cell *matHeaderCellDef> reportname</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.reportname}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="readonly">
       <mat-header-cell *matHeaderCellDef> Read only </mat-header-cell>
-      <mat-cell *matCellDef="let element"><app-edit-popup [itemid]="element.id" [tableContent]="dataSource" (tableContentStatusChange)='tableContentStatusChange(event)'></app-edit-popup></mat-cell>
+      <mat-cell *matCellDef="let element"><app-edit-popup [itemid]="element.report" [tableContent]="dataSource" (tableContentStatusChange)='tableContentStatusChange(event)'></app-edit-popup></mat-cell>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="Interview date">
-      <mat-header-cell *matHeaderCellDef> Title 2</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.interviewdate}} </mat-cell>
+    <ng-container matColumnDef="report">
+      <mat-header-cell *matHeaderCellDef>Report</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.report}} </mat-cell>
     </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="Interview time">
-      <mat-header-cell *matHeaderCellDef> Title 3 </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.interviewtime}} </mat-cell>
-    </ng-container>
-
     <!-- Symbol Column -->
-    <ng-container matColumnDef="Interview type">
-      <mat-header-cell *matHeaderCellDef> Title 4 </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.interviewtype}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="Primary interviewer">
-      <mat-header-cell *matHeaderCellDef> Title 5</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.primaryinterviewer}} </mat-cell>
+    <ng-container matColumnDef="datasetname">
+      <mat-header-cell *matHeaderCellDef>DataSet</mat-header-cell>
+      <mat-cell *matCellDef="let element"> <p *ngFor="let item of element.datasetname">{{item}}</p></mat-cell>
     </ng-container>
     <ng-container matColumnDef="Edit sec">
       <mat-header-cell *matHeaderCellDef>Download Option 
@@ -47,8 +35,7 @@
       <mat-cell *matCellDef="let element">
         <textarea class="form-control" rows="5" id="comment" disabled>{{element.comments}}</textarea>
      </mat-cell>
-    </ng-container>
-
+    </ng-container>-->
     <mat-header-row *matHeaderRowDef="displayColumnHeader"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayColumnHeader;"></mat-row>
   </mat-table>
