edit issue fixed

--- a/ReportGeneration/src/app/edit-popup/dialogcontent.html
+++ b/ReportGeneration/src/app/edit-popup/dialogcontent.html
@@ -26,6 +26,7 @@
     <div class="col-lg-8">
       <div class="form-group">
         <label for="">Interview time:</label>
+        <textarea class="form-control" rows="5" id="comment"  [(ngModel)]="data.datasetname"></textarea>
        <!-- <input type="text" class="form-control" id="modalinterviewtime" [(ngModel)]="data.interviewtime">-->
       </div>
     </div>
