data table fixed

--- a/ReportGeneration/src/app/reportstable/reportstable.component.html
+++ b/ReportGeneration/src/app/reportstable/reportstable.component.html
@@ -2,7 +2,7 @@
   <div class="col-lg-12">
     <div class="example-container mat-elevation-z8">
 
-      <mat-table #table [dataSource]="dataSource">
+      <mat-table #table [dataSource]="dataSource" scroll-glue-right>
         <ng-container *ngFor="let attr of dataObject">
           <ng-container *ngIf="attr.key.indexOf('Readonly')<0 && attr.key.toUpperCase().indexOf('COMMENTS')<0">
             <ng-container [matColumnDef]="attr.key">
