--- a/ReportGeneration/src/styles.css
+++ b/ReportGeneration/src/styles.css
@@ -1,18 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+.container{
+    background-color: white;
+    border: 1.5px solid black;
+    border-radius: 10px;
+    text-align: center;
+}
+.mat-table{
+    background-color: rgba(255, 255, 255, 0.959);
+    height : 100vh;
+    overflow: auto;   
+    max-width: 1123px;
+}
+.mat-header-cell, .mat-cell {
+    min-width: 150px;
+}
 .mat-form-field-underline{
     background-color:transparent;
 }
+
 .mat-form-field-flex{
     font-size: 14px;
     line-height: 1em;
     color: #555;
-    background-color: #fff;
     background-image: none;
     border: 1px solid #ccc;
     border-radius: 4px;
     margin-top: 8px;
-    padding: 2px
+    padding: 2px;
 }
 .mat-form-field-wrapper{
     padding-bottom: 1.25em;
@@ -21,6 +36,9 @@
 .mat-form-field-infix{
     border:0px;
 }
-mat-form-field{
-    margin-top: -24px;
+.mat-paginator{
+    background-color: white;
+}
+.mat-row, .mat-header-row {
+  width: 1123px; 
 }
