--- a/ReportGeneration/src/app/data-table/data-table.component.html
+++ b/ReportGeneration/src/app/data-table/data-table.component.html
@@ -1,36 +1,28 @@
 <div class="row">
-<div class="col-lg-12">
-<div class="example-container mat-elevation-z8">
-  <mat-table #table [(dataSource)]="dataSource">
-
-    <ng-container matColumnDef="reportname">
-      <mat-header-cell *matHeaderCellDef> Report name </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.reportname}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="report">
-      <mat-header-cell *matHeaderCellDef> Report </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.report}} </mat-cell>
-    </ng-container>
-   
-    <ng-container matColumnDef="datasetname">
-      <mat-header-cell *matHeaderCellDef> Data set </mat-header-cell>
-      <mat-cell *matCellDef="let element"> <p *ngFor="let item of element.datasetname">{{item}}</p> </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="comments">
-      <mat-header-cell *matHeaderCellDef>Comments</mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        <textarea class="form-control" rows="5" id="comment" disabled>{{element.comments}}</textarea>
-      </mat-cell>
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="displayColumnHeader"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayColumnHeader;"></mat-row>
-  </mat-table>
-
-  <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]">
-  </mat-paginator>
-</div>
-</div>
+  <div class="col-lg-12">
+    <div class="example-container mat-elevation-z8">
+      <mat-table #table [dataSource]="dataSource">
+        <ng-container *ngFor="let attr of dataObject">
+          <ng-container *ngIf="attr.key.indexOf('Readonly')<0 && attr.key.toUpperCase().indexOf('COMMENTS')<0">
+            <ng-container [matColumnDef]="attr.key">
+              <mat-header-cell *matHeaderCellDef>{{attr.key}}</mat-header-cell>
+              <mat-cell *matCellDef="let element"> {{attr.value}} </mat-cell>
+            </ng-container>
+          </ng-container>
+          <ng-container *ngIf="attr.key.toUpperCase().indexOf('COMMENTS')>=0">
+            <ng-container [matColumnDef]="attr.key">
+              <mat-header-cell *matHeaderCellDef>{{attr.key}}</mat-header-cell>
+              <mat-cell *matCellDef="let element">
+                <textarea class="form-control" rows="5" id="comment" disabled>{{element.comments}}</textarea>
+              </mat-cell>
+            </ng-container>
+          </ng-container>
+        </ng-container>
+        <mat-header-row *matHeaderRowDef="displayColumnHeader"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayColumnHeader;"></mat-row>
+      </mat-table>
+      <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]">
+      </mat-paginator>
+    </div>
+  </div>
 </div>
