edit popup added

--- a/ReportGeneration/src/app/edit-popup/dialogcontent.html
+++ b/ReportGeneration/src/app/edit-popup/dialogcontent.html
@@ -1,45 +1,14 @@
 <h1 mat-dialog-title>Table Data</h1>
 <div mat-dialog-content>
-  <div class="row">
+  <div class="row" *ngFor="let item of data">
     <div class="col-lg-2">
     </div>
     <div class="col-lg-8">
       <div class="form-group">
-        <label for="">Report Name</label>
-        <input type="text" class="form-control" id="modalid" [(ngModel)]="data.reportname">
+        <label for="">{{item.key}}</label>
+        <input type="text" *ngIf="item.key.toUpperCase().indexOf('COMMENTS')<0" class="form-control" id="modalid" [(ngModel)]="item.value">
+        <textarea *ngIf="item.key.toUpperCase().indexOf('COMMENTS')>=0" class="form-control" rows="5" id="comment"  [(ngModel)]="data.comments"></textarea>
       </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-2">
-    </div>
-    <div class="col-lg-8">
-      <div class="form-group">
-        <label for="">Report:</label>
-        <input type="text" class="form-control" id="modalid" [(ngModel)]="data.report">
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-2">
-    </div>
-    <div class="col-lg-8">
-      <div class="form-group">
-        <label for="">Interview time:</label>
-        <textarea class="form-control" rows="5" id="comment"  [(ngModel)]="data.datasetname"></textarea>
-       <!-- <input type="text" class="form-control" id="modalinterviewtime" [(ngModel)]="data.interviewtime">-->
-      </div>
-    </div>
-  </div>
-   <div class="row">
-    <div class="col-lg-2">
-    </div>
-    <div class="col-lg-8">
-      <div class="form-group">
-          <label for="">Comments*:</label>
-          <span *ngIf="isError" class="required">Comments Required</span>
-          <textarea class="form-control" rows="5" id="comment"  [(ngModel)]="data.comments"></textarea>
-        </div>
     </div>
   </div>
 </div>
