--- a/ReportGeneration/src/app/landingpage/landingpage.component.html
+++ b/ReportGeneration/src/app/landingpage/landingpage.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-4" *ngFor="let item of reportTableData">
-     <button type="button" class="btn btn-default" *ngIf="selectedlogindata.action.indexOf(item.report)>=0?true:false" (click)="navigationCheck()">{{item.report}}</button>
+     <button type="button" class="btn btn-default" *ngIf="selectedlogindata.action.indexOf(item.report)>=0?true:false" (click)="navigationCheck(item.report)">{{item.report}}</button>
      <button type="button" class="btn btn-default" *ngIf="selectedlogindata.action.indexOf(item.report)<0?true:false" disabled >{{item.report}}</button>
   </div>
 </div>
