--- a/ReportGeneration/src/styles.css
+++ b/ReportGeneration/src/styles.css
@@ -10,7 +10,7 @@
     background-color: rgba(255, 255, 255, 0.959);
     height : 100vh;
     overflow: auto;   
-    max-width: 1123px;
+   /* max-width: 1123px;*/
 }
 .mat-header-cell, .mat-cell {
     min-width: 150px;
