--- a/ReportGeneration/src/app/edit-popup/dialogcontent.html
+++ b/ReportGeneration/src/app/edit-popup/dialogcontent.html
@@ -1,14 +1,14 @@
 <h1 mat-dialog-title>Table Data</h1>
 <div mat-dialog-content>
-  <div class="row" *ngFor="let item of data">
+  <div class="row" *ngFor="let item of data.column">
     <div class="col-lg-2">
     </div>
     <div class="col-lg-8">
       <div class="form-group">
-        <label for="">{{item.key}}</label>
-        <span class="required" *ngIf="item.key.toUpperCase().indexOf('COMMENTS')>=0 && dataInternal.isError">Comments is required</span>
-        <input type="text" *ngIf="item.key.toUpperCase().indexOf('COMMENTS')<0" class="form-control" id="modalid" [(ngModel)]="item.value">
-        <textarea *ngIf="item.key.toUpperCase().indexOf('COMMENTS')>=0" class="form-control" rows="5" id="comment"  [(ngModel)]="dataInternal.comments"></textarea>
+        <label for="">{{item}}</label>
+        <span class="required" *ngIf="item.toUpperCase().indexOf('COMMENTS')>=0 && dataInternal.isError">Comments is required</span>
+        <input type="text" *ngIf="item.toUpperCase().indexOf('COMMENTS')<0" class="form-control" id="modalid" [(ngModel)]="data.data[item]">
+        <textarea *ngIf="item.toUpperCase().indexOf('COMMENTS')>=0" class="form-control" rows="5" id="comment"  [(ngModel)]="data.data[item]"></textarea>
       </div>
     </div>
   </div>
