--- a/ReportGeneration/src/app/reportstable/reportstable.component.html
+++ b/ReportGeneration/src/app/reportstable/reportstable.component.html
@@ -23,7 +23,7 @@
                   <button mat-button class="btn btn-default" [matMenuTriggerFor]="menu">Download</button>
                   <mat-menu #menu="matMenu">
                     <button mat-menu-item (click)="downloadCSV()">CSV</button>
-                    <button mat-menu-item>Excel</button>
+                    <button mat-menu-item (click)="downloadExcel()">Excel</button>
                   </mat-menu>
                 </mat-header-cell>
               <!--<mat-header-cell *matHeaderCellDef>{{attr.key}}</mat-header-cell>-->
