--- a/ReportGeneration/src/app/login/login.component.html
+++ b/ReportGeneration/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="well-sm  text-center">
   <h2>Login</h2>
 </div>
-<form #loginForm="ngForm">
+<form #loginForm="ngForm" (keydown)="keyDownFunction($event)">
   <div [hidden]="loginForm.submitted">
     <div class="row">
       <div class="col-lg-3">
@@ -18,7 +18,7 @@
       <div class="col-lg-5">
       </div>
       <div class="col-lg-6 topPadding">
-        <button type="button" class="btn btn-primary" (click)="loginData(logindata)">Login</button>
+        <button type="button" class="btn btn-primary"  (click)="loginData(logindata)">Login</button>
         <button type="button" class="btn btn-default">Register</button>
       </div>
     </div>
