--- a/ReportGeneration/src/app/edit-popup/dialogcontent.html
+++ b/ReportGeneration/src/app/edit-popup/dialogcontent.html
@@ -4,7 +4,7 @@
     <div class="col-lg-2">
     </div>
     <div class="col-lg-8">
-      <div class="form-group">
+      <div class="form-group" *ngIf="item!='Readonly'">
         <label for="">{{item}}</label>
         <span class="required" *ngIf="item.toUpperCase().indexOf('COMMENTS')>=0 && dataInternal.isError">Comments is required</span>
         <input type="text" *ngIf="item.toUpperCase().indexOf('COMMENTS')<0" class="form-control" id="modalid" [(ngModel)]="data.data[item]">
